--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sketch-typings",
   "version": "0.1.1",
   "description": "Community built set of typescript declarations for writing Sketch plugins.",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arvinxx/sketch-typings.git"
