🔧 chore: update config

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "prettier **/*.ts",
     "lint": "npm run prettier -- -c",
     "publish": "np  --no-cleanup --yolo",
-    "publish:next": "np  --no-cleanup --yolo --tag=next",
+    "publish:next": "np  --no-cleanup --yolo --tag=next"
   },
   "license": "MIT",
   "author": "Arvin Xu <arvinx@foxmail.com> (https://www.arvinx.com)",
