💚 chore: Fix ci config

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,19 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-16.04
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
     - name: Checkout project repository
       uses: actions/checkout@v2
 
+    - name: install
+      run: npm install
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install, build and test
+    - name: test
       run: npm ci && npm test
