--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   },
   "license": "MIT",
   "author": "Arvin Xu <arvinx@foxmail.com> (https://www.arvinx.com)",
-  "types": "./typings/index.d.ts",
+  "types": "./types/index.d.ts",
   "files": [
-    "typings"
+    "types"
   ],
+  "dependencies": {
+    "cocoascript-types": "*",
+    "sketch-internal-types": "*"
+  },
   "devDependencies": {
     "np": "^6.4.0",
     "prettier": "^2.1.1",
-    "typescript": "^3.9.5"
+    "typescript": "^4.1.3"
   },
   "bugs": {
     "url": "https://github.com/arvinxx/sketch-typings/issues"
