--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sketch-typings",
   "version": "0.4.0",
   "description": "Community built set of typescript declarations for writing Sketch plugins.",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arvinxx/sketch-typings.git"
@@ -18,9 +17,7 @@
   "license": "MIT",
   "author": "Arvin Xu <arvinx@foxmail.com> (https://www.arvinx.com)",
   "types": "./types/index.d.ts",
-  "files": [
-    "types"
-  ],
+  "files": ["types"],
   "dependencies": {
     "cocoascript-types": "*",
     "sketch-internal-types": "*"
