--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "emitDecoratorMetadata": true,
-    "typeRoots": [
-      "./types"
-    ],
+    "typeRoots": ["./types"],
     "experimentalDecorators": true,
     "types": ["cocoascript-types", "sketch-internal-types"],
     "newLine": "lf",
