--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sketch-typings",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Community built set of typescript declarations for writing Sketch plugins.",
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
   "license": "MIT",
   "author": "Arvin Xu <arvinx@foxmail.com> (https://www.arvinx.com)",
   "types": "./types/index.d.ts",
-  "files": ["types"],
+  "files": [
+    "types"
+  ],
   "dependencies": {
     "cocoascript-types": "*",
     "sketch-internal-types": "*"
