--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sketch-typings",
+  "name": "sketch-types",
   "version": "0.4.1",
   "description": "Community built set of typescript declarations for writing Sketch plugins.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arvinxx/sketch-typings.git"
+    "url": "git+https://github.com/sketch-community/sketch-types.git"
   },
   "scripts": {
     "tsc": "tsc",
@@ -30,10 +30,10 @@
     "typescript": "^4.1.3"
   },
   "bugs": {
-    "url": "https://github.com/arvinxx/sketch-typings/issues"
+    "url": "https://github.com/sketch-community/sketch-types/issues"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "homepage": "https://github.com/arvinxx/sketch-typings#readme"
+  "homepage": "https://github.com/sketch-community/sketch-types#readme"
 }
