--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "tsc": "tsc",
     "test": "npm run lint",
     "prettier": "prettier **/*.ts",
-    "lint": "npm run prettier -- -c",
-    "release": "np  --no-cleanup --yolo",
-    "release:next": "np  --no-cleanup --yolo --any-branch --tag=next"
+    "lint": "npm run prettier",
+    "release": "semantic-release"
   },
   "license": "MIT",
   "author": "Arvin Xu <arvinx@foxmail.com> (https://www.arvinx.com)",
@@ -25,9 +24,13 @@
     "sketch-internal-types": "*"
   },
   "devDependencies": {
-    "np": "^7.0.0",
     "prettier": "^2.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "commitlint": "^12.0.1",
+    "commitlint-config-gitmoji": "^2.2.5-beta.3",
+    "husky": "^4.3.8",
+    "semantic-release": "^17.3.7",
+    "semantic-release-config-gitmoji": "^1.2.4"
   },
   "bugs": {
     "url": "https://github.com/sketch-community/sketch-types/issues"
