--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "prettier": "^2.1.1",
     "typescript": "^4.1.3",
     "commitlint": "^12.0.1",
-    "commitlint-config-gitmoji": "^2.2.5-beta.3",
+    "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^4.3.8",
-    "semantic-release": "^17.3.7",
+    "semantic-release": "^18.0.0",
     "semantic-release-config-gitmoji": "^1.2.4"
   },
   "bugs": {
