--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
     "index.js"
   ],
   "dependencies": {
-    "@sketch-hq/sketch-file-format-ts": "^6.1.1",
+    "@sketch-hq/sketch-file-format-ts": "^6",
     "cocoascript-types": "latest",
     "sketch-internal-types": "latest"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "commitlint": "^12.0.1",
-    "commitlint-config-gitmoji": "^2.2.5",
-    "husky": "^4.3.8",
+    "commitlint": "^17",
+    "commitlint-config-gitmoji": "^2",
+    "husky": "^8",
     "prettier": "^2.1.1",
-    "semantic-release": "^18.0.0",
+    "semantic-release": "^20",
     "semantic-release-config-gitmoji": "^1.2.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4"
   },
   "bugs": {
     "url": "https://github.com/sketch-community/sketch-types/issues"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "homepage": "https://github.com/sketch-community/sketch-types#readme"
 }
